--- a/RobustaStudioTask/RobustaStudioTask/Views/Reusable Cells/RepositoryCell/RepositoryCell.xib
+++ b/RobustaStudioTask/RobustaStudioTask/Views/Reusable Cells/RepositoryCell/RepositoryCell.xib
@@ -45,7 +45,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="dso-kN-cy3">
                                         <rect key="frame" x="0.0" y="41" width="245.5" height="20"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ZeroStateRepos" translatesAutoresizingMaskIntoConstraints="NO" id="PGg-8U-1s4">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PGg-8U-1s4">
                                                 <rect key="frame" x="0.0" y="0.0" width="15" height="20"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="EZ1-a1-cVn"/>
@@ -94,7 +94,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="ZeroStateRepos" width="251.5" height="319.5"/>
         <systemColor name="systemGray5Color">
             <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
