--- a/RobustaStudioTask/RobustaStudioTask/Views/Reusable Cells/RepositoryCell/RepositoryCell.xib
+++ b/RobustaStudioTask/RobustaStudioTask/Views/Reusable Cells/RepositoryCell/RepositoryCell.xib
@@ -10,25 +10,25 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="RepositoryCell" rowHeight="90" id="KGk-i7-Jjw" customClass="RepositoryCell" customModule="RobustaStudioTask" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="350" height="90"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="RepositoryCell" rowHeight="127" id="KGk-i7-Jjw" customClass="RepositoryCell" customModule="RobustaStudioTask" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="350" height="127"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320.5" height="90"/>
+                <rect key="frame" x="0.0" y="0.0" width="320.5" height="127"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="5su-l9-3GR">
-                        <rect key="frame" x="15" y="10" width="305.5" height="69.5"/>
+                        <rect key="frame" x="15" y="10" width="305.5" height="106.5"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MYP-wy-4qG" customClass="ImageLoader" customModule="RobustaStudioTask" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="9.5" width="50" height="50"/>
+                                <rect key="frame" x="0.0" y="28" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="YAY-Fd-mNZ"/>
                                     <constraint firstAttribute="height" constant="50" id="jmr-e1-S0N"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="tUC-Z2-a3c">
-                                <rect key="frame" x="60" y="4" width="245.5" height="61"/>
+                                <rect key="frame" x="60" y="2" width="245.5" height="102"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6DY-MG-F4Q">
                                         <rect key="frame" x="0.0" y="0.0" width="245.5" height="20.5"/>
@@ -42,8 +42,14 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Uj-vy-IRJ">
+                                        <rect key="frame" x="0.0" y="41" width="245.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="dso-kN-cy3">
-                                        <rect key="frame" x="0.0" y="41" width="245.5" height="20"/>
+                                        <rect key="frame" x="0.0" y="61.5" width="245.5" height="20"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PGg-8U-1s4">
                                                 <rect key="frame" x="0.0" y="0.0" width="15" height="20"/>
@@ -60,12 +66,18 @@
                                             </label>
                                         </subviews>
                                     </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Dz-UN-XV9">
+                                        <rect key="frame" x="0.0" y="81.5" width="245.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                             </stackView>
                         </subviews>
                     </stackView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uw3-Oe-mlv">
-                        <rect key="frame" x="15" y="89.5" width="290.5" height="0.5"/>
+                        <rect key="frame" x="15" y="126.5" width="290.5" height="0.5"/>
                         <color key="backgroundColor" systemColor="systemGray5Color"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="0.69999999999999996" id="w7c-2S-jP9"/>
@@ -84,13 +96,15 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="commentDetails" destination="8Dz-UN-XV9" id="sLj-OJ-jAy"/>
+                <outlet property="createdAt" destination="5Uj-vy-IRJ" id="fHl-4l-iiD"/>
                 <outlet property="ownerAvatar" destination="MYP-wy-4qG" id="niH-JI-ajz"/>
                 <outlet property="ownerName" destination="6DY-MG-F4Q" id="cW0-ov-c3f"/>
                 <outlet property="repoName" destination="77p-zq-4P9" id="vuj-bE-FpN"/>
                 <outlet property="repoOwnerType" destination="oAY-b4-Yn8" id="Z8k-ns-kgd"/>
                 <outlet property="repoTypeImage" destination="PGg-8U-1s4" id="d7k-rg-BT2"/>
             </connections>
-            <point key="canvasLocation" x="159.42028985507247" y="125.89285714285714"/>
+            <point key="canvasLocation" x="159.42028985507247" y="138.28125"/>
         </tableViewCell>
     </objects>
     <resources>
