--- a/RobustaStudioTask/RobustaStudioTask/Resources/Storyboards/Home.storyboard
+++ b/RobustaStudioTask/RobustaStudioTask/Resources/Storyboards/Home.storyboard
@@ -8,11 +8,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Repositories ListVC-->
+        <!--Git Hub RepositoriesVC-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="RepositoriesListVC" id="Y6W-OH-hqX" customClass="RepositoriesListVC" customModule="RobustaStudioTask" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc" customClass="RepositoriesListView" customModule="RobustaStudioTask" customModuleProvider="target">
+                <viewController storyboardIdentifier="GitHubRepositoriesVC" id="Y6W-OH-hqX" customClass="GitHubRepositoriesVC" customModule="RobustaStudioTask" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc" customClass="GitHubRepositoriesView" customModule="RobustaStudioTask" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
